2008-07-24  Benjamin Herr  <ben@0x539.de>

	* src/packet.cpp: Preallocate and only copy the string once when
	escaping or unescaping it.

2008-07-02  Philipp Kern  <phil@0x539.de>

	* Makefile.am: fix the file to work with `make distcheck'

2008-07-02  Philipp Kern  <phil@0x539.de>

	* configure.ac: adjust the bug reporting address to `gobby@0x539.de'

2008-07-02  Philipp Kern  <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.7 and document the changes

2008-07-02  Philipp Kern  <phil@0x539.de>

	* po/pt.po: add new partial Portuguese translation
	* po/{fr,it,sv,nl}.po: updated files exported from Launchpad

2008-07-01  Armin Burgmeier  <armin@0x539.de>

	* src/select.cpp: Include config.hpp so that HAVE_SYS_SELECT_H is
	defined when we need it. Thanks to Hasso Tepper.

2007-12-03  Philipp Kern <phil@0x539.de>

	* configure.ac: bump version to 1.3.6

2007-12-01  Philipp Kern <phil@0x539.de>

	* New Italian translation, thanks to Sergio Zanchetta.
	* Translation import from Rosetta.

2007-07-22  Philipp Kern <phil@0x539.de>

	* New Swedish translation by Daniel Nylander [fixes #280]

2007-06-15  Philipp Kern <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.5 and document the
	  changes

2007-05-21  Benjamin Herr <ben@0x539.de>

	* inc/server.hpp: fixed user object access after deallocation

2007-04-15  Philipp Kern <phil@0x539.de>

	* NEWS, configure.ac: bump version to 1.3.4, try to document
	  the changes

2007-04-15  Philipp Kern <phil@0x539.de>

	* configure.in: renamed to configure.ac

2007-04-07  Armin Burgmeier  <armin@0x539.de>

	* src/address.cpp: Fix self-assignment check in net6::ipv4_address and
	net6::ipv6_address. Fixes #254.

2007-04-02  Philipp Kern <phil@0x539.de>

	* inc/client.hpp: reset connection pointer if an error occurs

2007-02-25  Armin Burgmeier <armin@0x539.de>

	* inc/server.hpp: Added overload instead of default argument for ipv6
	parameter in reopen(). Older gcc versions seem not to support member